@@ -2,6 +2,7 @@ xine-lib (1.1.19) 2010-??-??
   * Handle odd widths properly (for ffmpeg-decoded video).
   * Make buildable with current (external) libdvdnav & libdvdread.
   * Fix V4L2 check.
+  * Add support for Ogg tag 'DISCNUMBER' and ID3 tag 'TPOS'.
 
 xine-lib (1.1.18.1) 2010-03-06
   * Oops. compat.c (for DXR3 support) was omitted.
